DUKEMS-109 EnhancedSolrSearcher